syntax = "proto3";
option java_package = "edu.usfca.cs.dfs.messages";

message StoreChunk {
    string fileName = 1;
    int32 chunkId = 2;
    bytes data = 3;
}

message DownloadChunk {
    int32 chunkId = 1;
}

message DownloadFile {
    string fileName = 1;
}

message UploadFile {
    string fileName = 1;
}

message MessageWrapper {
    oneof msg {
        StoreChunk storeChunkMsg = 1;
        DownloadChunk downloadChunkMsg = 2;
        DownloadFile downloadFileMsg = 3;
        UploadFile uploadFileMsg = 4;
    }
}
